@@ -1,3 +1,8 @@
+2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+      * vtk/vtkGdcmReader[cxx|h] : makes correct code to remove conflicts 
+        between standard library (std) and vtk library (problems are found
+        under Windows... thanks Windows !)
+
 2003-05-30  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
       * vtk/vtkGdcmReader[cxx|h] should now be volume aware (read ready for
         debug stage).
